[package]
name = "sqstransfer"
version = "0.2.0"
authors = ["Kenta Onishi <kenta1988@gmail.com>"]
edition = "2018"
description = "CLI tool that transfers Amazon SQS messages to another SQS."
keywords = ["AWS", "SQS"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/ohke/sqstransfer"
readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "2.33.0"
rusoto_core = "0.42.0"
rusoto_sqs = "0.42.0"
